kubernetes/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: shirts4mike-frontend
spec:
  type: NodePort
  selector:
    app: shirts4mike
    tier: frontend
  ports:
  - port: 80
